--- a/projects.html
+++ b/projects.html
@@ -13,73 +13,80 @@
         <div class="nav-brand ">SOFTWARE DEVELOPER</div>
         <ul class="list-non-bullet align-to-right ">
             <li class="list-item-inline">
-                <a class="link " href="/">Home</a>
+                <a class="link " href="./index.html">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/projects.html">Projects</a>
+                <a class="link link-active" href="./projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/blogs.html">Blogs</a>
+                <a class="link" href="./blogs.html">Blogs</a>
             </li>
         </ul>
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="images/project-image2.svg" />
+        <img class="hero-img" src="images/projects.svg" />
         <h1 class="hero-heading">i<span style="color: var(--primary-color)"> Code</span>
         </h1>
     </header>
 
     <ol reversed>
 
+        <div class="container container-center padding-medium">
+            <li>
+                <h1>Series-Recommender</h1>
+                <small>December 19, 2020</small>
+                <p>Do you love binge watching? Checkout the series recommender for your next <strong>Favourite!</strong>series</p>
+                <a class="link link-primary" href="https://cg3t8.csb.app/">OPEN
+                    APP</a>
+                <a class="link link-last" href="https://github.com/ch-v/Series-Recommender">VIEW
+                    SOURCE</a>
+            </li>
+        </div>
 
         <div class="container container-center padding-medium">
             <li>
-                <h1>'Tis the season!</h1>
+                <h1>Emoji Interpreter</h1>
                 <small>December 15, 2020</small>
-                <p>Jingle bells, jingle bells, jingle all the way! Oh what fun it is to ride, in a one-horse open
-                    sleigh! Christmas is round the corner, so take a look at the meaning of popular <strong>Christmas
-                        emojis</strong> (made with React) before sending it to your family and friends!</p>
-                <a class="link link-primary" href="#">OPEN
+                <p>Use this to find your favourite emoji (made with React) before sending it to your family and friends!</p>
+                <a class="link link-primary" href="https://r7pj8.csb.app/">OPEN
                     APP</a>
-                <a class="link link-last" href="#">VIEW
+                <a class="link link-last" href="https://github.com/ch-v/Emoji-Interpreter">VIEW
                     SOURCE</a>
             </li>
         </div>
 
         <div class="container container-center padding-medium">
             <li>
-                <h1>English to Morse Code</h1>
+                <h1>Yoda Language Translator</h1>
                 <small>December 12, 2020</small>
-                <p>Do you want to pass on a secret message? Then using this <strong>Morse Code Translator </strong>App,
-                    you can convert it from English to Morse Code!</p>
-                <a class="link link-primary" href="#">OPEN
+                <p>Are you a fan of yoda? Use this<strong>Yoda Language Translator </strong>to 
+                    convert your message to the language that yoda understands!</p>
+                <a class="link link-primary" href="https://yodatranslatoor.netlify.app">OPEN
                     APP</a>
-                <a class="link link-last" href="#">VIEW
+                <a class="link link-last" href="https://github.com/ch-v/yoda-translator">VIEW
                     SOURCE</a>
             </li>
         </div>
 
         <div class="container container-center padding-medium">
             <li>
-                <h1>Want to talk in Minionese?</h1>
-                <small>December 11, 2020</small>
-                <p>Are you a fan of minions? Use the translator to convert your text from English to the language of the
-                    minions: <strong>Minionese!</strong></p>
-                <a class="link link-primary" href="#">OPEN
+                <h1>Minion Language Translator</h1>
+                <small>December 10, 2020</small>
+                <p>Are you a fan of Minions? Use this<strong>Minion Language Translator </strong>to 
+                    convert your message to the language that minions understands!</p>
+                <a class="link link-primary" href="https://miniontranslatoor.netlify.app">OPEN
                     APP</a>
-                <a class="link link-last" href="#">VIEW
+                <a class="link link-last" href="https://github.com/ch-v/minion-translator">VIEW
                     SOURCE</a>
             </li>
         </div>
 
-
         <div class="container container-center padding-medium">
             <li>
-                <h1>Are you a BNHA fan?</h1>
-                <small>November 26, 2020</small>
-                <p>This is a fun quiz on the famous anime-<strong>Boku no Hero Academia!!</strong> Answer honestly,
-                    don't cheat! Send me a screenshot of your score! Enjoyy!</p>
+                <h1>Are you a Money Heist fan?</h1>
+                <small>December 6, 2020</small>
+                <p>This is a fun quiz on the famous series-<strong>Money Heist</strong> Enjoy!</p>
                 <a class="link link-primary"
                     href="https://repl.it/@VishalChaudhary/MARK1-MoneyHeistQuiz">OPEN
                     GAME</a>
@@ -92,7 +99,7 @@
         <div class="container container-center padding-medium">
             <li>
                 <h1>How well do you know me?</h1>
-                <small>November 25, 2020</small>
+                <small>December 5, 2020</small>
                 <p>This CLI app is built with <strong>nodeJS</strong>. Try it if you know me well!</p>
                 <a class="link link-primary"
                     href="https://repl.it/@VishalChaudhary/How-Well-Do-You-Know-Me">OPEN
@@ -104,8 +111,6 @@
         </div>
 
     </ol>
-
-
 
 
     <footer class="footer">
