--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="nav-brand ">SOFTWARE DEVELOPER</div>
         <ul class="list-non-bullet align-to-right ">
             <li class="list-item-inline">
-                <a class="link link-active" href="/">Home</a>
+                <a class="link link-active" href="../index.html">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/projects.html">Projects</a>
+                <a class="link" href="./projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/blogs.html">Blogs</a>
+                <a class="link" href="./blogs.html">Blogs</a>
             </li>
         </ul>
     </nav>
@@ -45,7 +45,7 @@
             <h1>Projects</h1>
             <p>Along with learning, testing your skills is important. So I have created and hosted some projects
                 online </p>
-            <a class=" link link-primary" href="/projects.html">See Projects</a>
+            <a class=" link link-primary" href="./projects.html">See Projects</a>
         </div>
     </section>
 
@@ -53,7 +53,7 @@
         <div class="container container-center">
             <h1>Blogs</h1>
             <p>I have recently started to write some nice blogs. Do check them out!</p>
-            <a class=" link link-secondary" href="/blogs.html">Read Blogs</a>
+            <a class=" link link-secondary" href="./blogs.html">Read Blogs</a>
         </div>
     </section>
 
