--- a/lib/components.html
+++ b/lib/components.html
@@ -74,16 +74,16 @@
     <h2>@nav</h2>
 
     <nav class="navigation container">
-        <div class="nav-brand ">SOFTWAREDEVELOPER</div>
+        <div class="nav-brand ">SOFTWARE DEVELOPER</div>
         <ul class="list-non-bullet align-to-right ">
             <li class="list-item-inline">
-                <a class="link link-active" href="/">Home</a>
+                <a class="link link-active" href="../index.html">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Projects</a>
+                <a class="link" href="../projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Blogs</a>
+                <a class="link" href="../blogs.html">Blogs</a>
             </li>
         </ul>
     </nav>
@@ -93,7 +93,7 @@
     <h2>@header</h2>
 
     <header class="hero">
-        <img class="hero-img" src="/images/hero-image.svg" />
+        <img class="hero-img" src="../images/portfolio-image.svg" />
         <h1 class="hero-heading">Vishal Chaudhary the <span style="color: var(--primary-color)">Web Developer</span>
         </h1>
     </header>
