Updated Mark-8 Project Link

--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                 <h1>Emoji Interpreter</h1>
                 <small>December 15, 2020</small>
                 <p>Use this to find your favourite emoji (made with React) before sending it to your family and friends!</p>
-                <a class="link link-primary" href="https://r7pj8.csb.app/">OPEN
+                <a class="link link-primary" href="https://rqo9m.csb.app/">OPEN
                     APP</a>
                 <a class="link link-last" href="https://github.com/ch-v/Emoji-Interpreter">VIEW
                     SOURCE</a>
